fix: preserve null receipt identity in shadow gate comparator